# Frontier

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt
src/applications/uci/: CMakeLists.txt  uci.m.cpp2
src/groups/: CMakeLists.txt
src/groups/csl/: CMakeLists.txt
src/groups/csl/cslb/: CMakeLists.txt  cslb_bitboard.h2  cslb_castling.h2  cslb_direction.h2  cslb_file.h2  cslb_move.h2  cslb_piececolor.h2  cslb_piecetype.h2  cslb_position.h2  cslb_position.t.cpp2  cslb_rank.h2  cslb_session.h2  cslb_square.h2  cslb_zobristhash.h2
src/groups/csl/cslt/: CMakeLists.txt  cslt_evaluate.h2  cslt_fendecoder.h2  cslt_fenencoder.h2  cslt_pgndecoder.h2  cslt_pgnencoder.h2  cslt_zobristhash.h2
src/groups/csl/csluci/: CMakeLists.txt  csluci_input.h2  csluci_input.t.cpp2  csluci_output.h2  csluci_output.t.cpp2  csluci_program_options.h2  csluci_program_options.t.cpp2
