add_subdirectory(cslb)    # Chess Standard Library Basics
add_subdirectory(cslt)    # Chess Standard Library Transformations
add_subdirectory(csleh)   # Chess Standard Library Evaluation Heuristics
add_subdirectory(cslnnue) # Chess Standard Library Efficiently Updatable Neural Network
add_subdirectory(cslai)   # Chess Standard Library Artificial Intellegence
add_subdirectory(csluci)  # Chess Standard Library Universal Chess Interface
